--- a/css/formulario-style.css
+++ b/css/formulario-style.css
@@ -3,32 +3,12 @@
 :root {
     /* Blanco */
     --color-blanco: #F6F6F6;
-    /* Rosa pastel */
-    --color-rosa-pastel: #FA8AE0;
-    /* Rosa pálido */
-    --color-rosa-palido: #F995E1;
-    /* Gris claro */
-    --color-gris-claro: #CCC;
-    /* Rosa intenso */
-    --color-rosa-intenso: #F157A4;
-    /* Púrpura claro */
-    --color-purpura-claro: #910C6F;
-    /* Púrpura oscuro */
-    --color-purpura-oscuro: #2B051C;
-    /* Púrpura profundo */
-    --color-purpura-profundo: #810338;
-    /* Rojo */
-    --color-rojo: #FF0000;
-}
-
-
-:root {
-    /* Blanco */
-    --color-blanco: #F6F6F6;
     /* Rosa intenso */
     --color-rosa-intenso: #F157A4;
     /* Púrpura claro */
     --color-magenta-profundo: #700359;
+    /* Rojo */
+    --color-rojo: #FF0000;
 }
 
 .agregar_producto {
@@ -58,7 +38,7 @@
 .form_container_galeria {
     display: flex;
     flex-direction: column;
-    gap: 25px;
+    gap: 35px;
     width: 100%;
 }
 
@@ -94,3 +74,84 @@
     background-color: var(--color-rosa-intenso);
     transform: scale(1.30);
 }
+
+  /* Estilos para dispositivos con un ancho máximo de 480px (celulares) */
+@media only screen and (max-width: 480px) {
+    .section_container {
+        flex-direction: column; 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .agregar_producto {
+        width: 80%; 
+        padding: 20px;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-height: 300px;
+        order: -1;
+        margin-bottom: 20px;
+        justify-content: center;
+    }
+    
+    .agregar_producto h1 {
+        font-size: 18px;
+        padding-bottom: 1px;
+    }
+    
+    .form_container_galeria {
+        display: flex;
+        flex-direction: column;
+        gap: 35px;
+        width: 100%;
+    }
+    
+    .form_container_galeria input {
+        padding: 10px;
+        border-radius: 5px;
+        font-size: 12px;
+        height: 15px; 
+    }
+    
+    .button_container_galeria {
+        flex-direction: column; /* Botones en columna */
+        align-items: center; /* Centra los botones */
+        width: 80%; 
+    }
+    
+    .button_submit {
+        
+        text-align: center;
+        justify-content: center;
+        font-size: 15px;
+        width: 80%; /* Ajusta el ancho del botón para dispositivos pequeños */
+        margin-bottom: 10px;
+        height: 30px;
+        transition: all 500ms;
+        align-items: center;
+    }
+    
+    .button_submit:hover {
+        background-color: var(--color-rosa-intenso);
+        transform: scale(1);
+    }
+    
+  }
+  
+  /* Estilos para dispositivos con un ancho mínimo de 481px y un máximo de 768px (tabletas) */
+  @media only screen and (min-width: 481px) and (max-width: 768px) {
+    /* Tus estilos aquí */
+  }
+  
+  /* Estilos para dispositivos con un ancho mínimo de 769px y un máximo de 1023px (computadoras portátiles) */
+  @media only screen and (min-width: 769px) and (max-width: 1023px) {
+    /* Tus estilos aquí */
+  }
+  
+  /* Estilos para dispositivos con un ancho mínimo de 1024px (computadoras de escritorio) */
+  @media only screen and (min-width: 1024px) {
+    /* Tus estilos aquí */
+  }
