--- a/css/galeria-style.css
+++ b/css/galeria-style.css
@@ -188,7 +188,7 @@
     }
     
     .mis_productos {
-        width: 80vm;
+        width: 80%;
         border-radius: 10px;
         align-items: center;
         justify-content: center;
